--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=upload
+logging.level.org.apache.coyote.http11=trace
+
+#멀티파트 데이터 처리 기본 true
+spring.servlet.multipart.enabled=true
+
+#기본용량과 합계용량 기본 1MB, 10MB
+spring.servlet.multipart.max-file-size=1MB
+spring.servlet.multipart.max-request-size=10MB
