--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.servlet.multipart.enabled=true
 #기본용량과 합계용량 기본 1MB, 10MB
 spring.servlet.multipart.max-file-size=1MB
 spring.servlet.multipart.max-request-size=10MB
+
+file.dir=/Users/kokiyo1030/Documents/spring/4/file/
